--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/LOGO.png" />
+    <link rel="icon" type="image/png" href="images/LOGO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOBE CENTER | Nyabihu, Rwanda</title>
     <meta name="description" content="HOBE CENTER in Nyabihu district, Bigogwe sector, offering nature education and community programs in Rwanda." />
